# lift_plan_converter

./: .gitignore  README.md  main.py  pyproject.toml  sample_lift_plan.csv  sample_tieup.json  sample_treadling.csv  towel_8_sections.csv  towel_8_treadling.csv  weaving_liftplan.py
backend/: app.py  liftplan.py  render.yaml  requirements.txt
frontend/src/: App.tsx
sample_inputs/: sample_tieup.csv  towel_8_sections.csv  towel_8_treadling.csv
