[tool.poetry]
name = "lift_plan_converter"
version = "0.1.0"
description = ""
authors = ["Andrea Williams"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
argparse = "^1.4.0"
reportlab = "^4.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
